# Cctv-AI

./: agent.py  app.py  pyproject.toml  requirements.txt  visual.py
.github/workflows/: ci.yml
